app/globals.css
@import "tailwindcss";

:root {
  --background: #0a0a0a;
  --foreground: #ededed;
  --color-primary: #8200DB;
  --color-secondary: #322D36;
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --color-primary: var(--color-primary);
  --color-secondary: var(--color-secondary);
  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);
}

body {
  background: var(--background);
  color: var(--foreground);
  font-family: var(--font-sans), Arial, Helvetica, sans-serif;
  overflow-x: hidden;
}

